[package]
name = "decense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.10.12"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.31"